# glauber_dynamics_c

./: .gitignore  Doxyfile  Makefile.am  README  README.md  configure.ac  edge.c  glauber_dynamics.c  glauber_dynamics.h  glauber_evolution.c  glauber_evolution.h  main.c  make_video.sh  test_vertex.c  update_rules.c  update_rules.h  vertex.c  vertex.h  weightedgraph.c  weightedgraph.h
docs/: dir_13e138d54eb8818da29c3992edef070a.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a112a836a888525607e91d6f637d7528.html  doxygen_entrydb_12811.tmp  files.html  glauber__dynamics_8h_source.html  globals_type.html  pages.html  structgraph.html  update__rules_8h_source.html  weightedgraph_8h_source.html
docs/html/: classes.html  dir_544d770245561a9471f7ecd9c07dae3a.html  dir_72b30adf82dc298c89cd6f3f261b7b2b.html  dir_99de5344b509a596164d484eea310cb3.html  dir_a489def90788ed5a146e880bb0b81cfb.html  dir_d44c64559bbebec7f509842c48db8b23.html  edge_8h.html  entropy_8h_source.html  functions.html  functions_vars.html  glauber__dynamics_8h.html  index.html  md_lib_pcg-c_README.html  pcg__spinlock_8h_source.html  pcg__variants_8h_source.html  structarguments.html  structedge.html  structpcg32x2__random__t.html  structpcg__state__16.html  structpcg__state__32.html  structpcg__state__setseq__32.html  structpcg__state__setseq__8.html  structvfixture.html  update__rules_8c_source.html  vertex_8c_source.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_8.js  all_a.js  all_f.js  classes_5.js  files_6.js  functions_4.js  functions_6.js  pages_0.js  typedefs_1.js  typedefs_3.js  variables_1.js  variables_8.js  variables_c.js
docs/search/: all_4.js  all_5.js  all_b.js  classes_2.js  classes_4.js  files_1.js  files_2.js  files_4.js  files_5.js  functions_2.js  functions_3.js  functions_5.js  variables_2.js  variables_9.js  variables_d.js  variables_e.js  variables_f.js
documentation/html/: annotated.html  config_8h_source.html  dir_0aad1105adf6a94d433d271731122d48.html  dir_59fcbbff5594e618414c25b7c6d25911.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_a7ad62ffc1f2c0fa3093ef4e696b6d63.html  dir_b9e8a7f48932b0658e1576fa89651346.html  dir_dca84a01e0caafe303cb05bc262a0e38.html  dir_e871e18a10e44957040b7aec66149ff1.html  documentation_8h.html  documentation_8h_source.html  edge_8c_source.html  edge_8h_source.html  glauber__dynamics_8c_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  md_README.html  md_lib_pcg-c_CONTRIBUTING.html  menudata.js  structgfixture.html  structpcg__state__64.html  structpcg__state__8.html  structpcg__state__setseq__16.html  structpcg__state__setseq__64.html  structufixture.html  structvertex.html  todo.html  update__rules_8h.html  vertex_8h.html  vertex_8h_source.html  weightedgraph_8c_source.html  weightedgraph_8h.html  weightedgraph_8h_source.html
documentation/html/search/: all_11.js  all_2.js  all_3.js  all_c.js  all_e.js  classes_1.js  classes_3.js  defines_0.js  files_0.js  files_3.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  typedefs_2.js  typedefs_4.js  variables_0.js  variables_4.js  variables_6.js  variables_7.js
include/: documentation.h  glauber_dynamics.h  update_rules.h
lib/: Makefile.am
lib/weightedgraph/include/: edge.h  vertex.h  weightedgraph.h
lib/weightedgraph/src/: Makefile.am  edge.c  vertex.c  weightedgraph.c
lib/weightedgraph/test/: Makefile.am  test_vertex.c  test_weightedgraph.c
src/: Makefile.am  glauber_dynamics  glauber_dynamics.c  update_rules.c
src/.libs/: glauber_dynamics  lt-glauber_dynamics
test/: test_update_rules.c
